# oib

./: .gitignore  README.md
11_login/: CMakeLists.txt  main.cpp
13_apache/: bruteforce.c  password_check.c
1_cryptanalysis/: CMakeLists.txt  analysis.c  analysis.h  data.c  data.h  fs.c  fs.h  main.c  ui.c  ui.h  utils.c  utils.h
2_buffer_overflow/: exploit.py  vuln.c
2_buffer_overflow/auto_exploit/: CMakeLists.txt  common.c  common.h  debugger.c  debugger.h  main.c  utils.c  utils.h
2_buffer_overflow/vuln_program/: CMakeLists.txt  main.c
4_backdoors/client/: CMakeLists.txt  input.txt  main.c
4_backdoors/server/: CMakeLists.txt  main.c
6_software_protection/obfuscator/: .gitignore  README.md  config.ini  main.py  requirements.txt
6_software_protection/password_program/: encode_password.c  main.c
